decompsition step added

--- a/Task_4.ipynb
+++ b/Task_4.ipynb
@@ -359,7 +359,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2n Step: Ansatz"
+    "### 2n Step: Ansatz\n",
+    "\n",
+    "a"
    ]
   },
   {
