added ansatz step

--- a/Task_4.ipynb
+++ b/Task_4.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import itertools \n",
     "\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from qiskit import *"
    ]
   },
   {
@@ -173,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -359,10 +360,79 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2n Step: Ansatz\n",
+    "### 2nd Step: Ansatz\n",
     "\n",
-    "a"
+    "Choosing a good ansatz is complicate because you need to balance two opposite things.\n",
+    "1. Construct a state $ \\left| \\psi \\right\\rangle $ that is able to generate all or almost all the states in the Hilbert space.\n",
+    "2. Construct a quantum circuit with as few parameters as possible. \n",
+    "\n",
+    "As you may expect an ansatz with a few parameters will not visit the entire Hilbert space and ansatz that is able to visit the entire Hilbert space will have a lot of parameters.  However, in a 4-dimensional Hilbert space we can implement both ansatz. In higher Hilbert space option 1 it is impossible to implement for a VQE algorithm because the classical optimizer is not able to handle an exponential number of parameters as the system grows.\n",
+    "\n",
+    "In this case, I will initialize the circuit with the best ansatz:\n",
+    "\n",
+    "$$ (R_y \\otimes I) C_{NOT} (H \\otimes I) \\left| 0 \\right\\rangle \\otimes \\left| 0 \\right\\rangle $$\n",
+    "\n",
+    "Why is it the best ansatz? Because using numpy I've already computed the ground state and I know in which places of the Hilbert space to look for. I already know that the ground state is: \n",
+    "\n",
+    "$$\\frac{1}{\\sqrt{2}}\\big[ \\left|01\\right\\rangle + \\left|10\\right\\rangle \\big]$$\n",
+    "\n",
+    "So I need to build a circuit that will provide this step. It is important to notice that, this state is called [Bell state](https://en.wikipedia.org/wiki/Bell_state) and it is really famous because it is a state of maximum entanglement between 2 qubits. Additionaly, it is related with a famous paradox called [EPR paradox](https://en.wikipedia.org/wiki/EPR_paradox).\n",
+    "\n",
+    "Due to I knew it was a Bell state, I just need to Google: how to implement a Bell state? The answer is using a Hadamard gate and then a Control-Not gate.\n",
+    "\n",
+    "<img src=\"images/Bell_state_00.png\" alt=\"drawing\"/>\n",
+    "\n",
+    "So using this circuit our initial state $\\left|00\\right\\rangle$ becomes\n",
+    "\n",
+    "$$\\frac{1}{\\sqrt{2}}\\big[ \\left|00\\right\\rangle + \\left|11\\right\\rangle \\big]$$\n",
+    "\n",
+    "Lastly, we need to apply a rotation in the x-axis or in the y-axis to get the ground state, in my case I would use a $R_y$ gate ($R_x$ would also works). So, my variational parameter will be $\\theta$ (rotation angle on the y-axis). After several iterations on VQE, the classical optimizer will find out which is the value of $\\theta$ that outputs this state:\n",
+    "$$\\frac{1}{\\sqrt{2}}\\big[ \\left|01\\right\\rangle + \\left|10\\right\\rangle \\big]$$.\n",
+    "\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ansatz(circuit, theta):\n",
+    "    q = circuit.qregs[0]    \n",
+    "    circuit.h(q[0])\n",
+    "    circuit.cx(q[0], q[1])\n",
+    "    circuit.ry(theta, 0)\n",
+    "    return circuit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3rd step: Measurements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -406,10 +476,18 @@
    "metadata": {},
    "source": [
     "Bonus:\n",
+    "    1. Utiliza un noise simulator.\n",
     "    1. escriure circuit amb ansatz generica per hamiltonain 4x4\n",
     "    2. Lletgir es circuits de es paper: \n",
     "    3. Implentar un VQE per hamiltoniano 8x8, provant ansatz calculada numericament."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
